Added URL to read_csv and rendered Plotly as a PNG Image for markdown

--- a/Tidy-Tuesday-Insights/holidays.ipynb
+++ b/Tidy-Tuesday-Insights/holidays.ipynb
@@ -2,95 +2,56 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Map Timelapse: Unfinished"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "2021-07-06<br/>\r\n",
-    "International Independence Days <br/>\r\n",
+    "2021-07-06<br/>\n",
+    "International Independence Days <br/>\n",
     "https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-06/readme.md"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "https://towardsdatascience.com/how-to-create-an-animated-choropleth-map-with-less-than-15-lines-of-code-2ff04921c60b\r\n",
-    "https://towardsdatascience.com/simple-plotly-tutorials-868bd0890b8b\r\n",
-    "https://analyticsindiamag.com/beginners_guide_geographical_plotting_with_plotly/\r\n",
-    "\r\n"
-   ],
-   "metadata": {}
+    "https://towardsdatascience.com/how-to-create-an-animated-choropleth-map-with-less-than-15-lines-of-code-2ff04921c60b\n",
+    "https://towardsdatascience.com/simple-plotly-tutorials-868bd0890b8b\n",
+    "https://analyticsindiamag.com/beginners_guide_geographical_plotting_with_plotly/\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import pandas as pd\r\n",
+    "import pandas as pd\n",
     "import plotly.express as px"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "df=pd.read_csv('holidays.csv')"
-   ],
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "df=pd.read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2021/2021-07-06/holidays.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "df.head()"
-   ],
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "       country date_parsed   weekday   day month  \\\n",
-       "0  Afghanistan  1919-08-19   Tuesday  19.0   Aug   \n",
-       "1      Albania  1912-11-28  Thursday  28.0   Nov   \n",
-       "2      Algeria  1962-07-05  Thursday   5.0   Jul   \n",
-       "3      Andorra         NaN       NaN   NaN   NaN   \n",
-       "4       Angola  1975-11-11   Tuesday  11.0   Nov   \n",
-       "\n",
-       "                                name_of_holiday date_of_holiday  \\\n",
-       "0  Afghan Independence Day (Afghan Victory Day)       August 19   \n",
-       "1                    Flag Day (Dita e Flamurit)     November 28   \n",
-       "2                              Independence Day          July 5   \n",
-       "3                                          None             NaN   \n",
-       "4                              Independence Day     November 11   \n",
-       "\n",
-       "   year_of_event independence_from  \\\n",
-       "0         1919.0    United Kingdom   \n",
-       "1         1912.0    Ottoman Empire   \n",
-       "2         1962.0            France   \n",
-       "3            NaN               NaN   \n",
-       "4         1975.0          Portugal   \n",
-       "\n",
-       "                        event_commemorated_and_notes    year  \\\n",
-       "0  Anglo-Afghan Treaty of 1919 or Treaty of Rawal...  1919.0   \n",
-       "1  Albanian Declaration of Independence. The foll...  1912.0   \n",
-       "2  Algeria gained independence following the Alge...  1962.0   \n",
-       "3                                                NaN     NaN   \n",
-       "4  The Alvor Agreement, signed on 15 January 1975...  1975.0   \n",
-       "\n",
-       "            date_mdy  \n",
-       "0    August 19, 1919  \n",
-       "1  November 28, 1912  \n",
-       "2       July 5, 1962  \n",
-       "3                NaN  \n",
-       "4  November 11, 1975  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -203,23 +164,59 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "       country date_parsed   weekday   day month  \\\n",
+       "0  Afghanistan  1919-08-19   Tuesday  19.0   Aug   \n",
+       "1      Albania  1912-11-28  Thursday  28.0   Nov   \n",
+       "2      Algeria  1962-07-05  Thursday   5.0   Jul   \n",
+       "3      Andorra         NaN       NaN   NaN   NaN   \n",
+       "4       Angola  1975-11-11   Tuesday  11.0   Nov   \n",
+       "\n",
+       "                                name_of_holiday date_of_holiday  \\\n",
+       "0  Afghan Independence Day (Afghan Victory Day)       August 19   \n",
+       "1                    Flag Day (Dita e Flamurit)     November 28   \n",
+       "2                              Independence Day          July 5   \n",
+       "3                                          None             NaN   \n",
+       "4                              Independence Day     November 11   \n",
+       "\n",
+       "   year_of_event independence_from  \\\n",
+       "0         1919.0    United Kingdom   \n",
+       "1         1912.0    Ottoman Empire   \n",
+       "2         1962.0            France   \n",
+       "3            NaN               NaN   \n",
+       "4         1975.0          Portugal   \n",
+       "\n",
+       "                        event_commemorated_and_notes    year  \\\n",
+       "0  Anglo-Afghan Treaty of 1919 or Treaty of Rawal...  1919.0   \n",
+       "1  Albanian Declaration of Independence. The foll...  1912.0   \n",
+       "2  Algeria gained independence following the Alge...  1962.0   \n",
+       "3                                                NaN     NaN   \n",
+       "4  The Alvor Agreement, signed on 15 January 1975...  1975.0   \n",
+       "\n",
+       "            date_mdy  \n",
+       "0    August 19, 1919  \n",
+       "1  November 28, 1912  \n",
+       "2       July 5, 1962  \n",
+       "3                NaN  \n",
+       "4  November 11, 1975  "
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "source": [
-    "df.groupby('independence_from')['independence_from'].count()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "independence_from\n",
@@ -276,21 +273,21 @@
        "Name: independence_from, dtype: int64"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df.groupby('independence_from')['independence_from'].count()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "source": [
-    "df.columns"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['country', 'date_parsed', 'weekday', 'day', 'month', 'name_of_holiday',\n",
@@ -299,31 +296,32 @@
        "      dtype='object')"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df.columns"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a=df[['country', 'independence_from', 'year']]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "source": [
-    "a.fillna(0,inplace=True)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "d:\\Users\\DComputer\\Desktop\\learning\\Streamlined EDA and ML\\project_env\\lib\\site-packages\\pandas\\core\\frame.py:4153: SettingWithCopyWarning:\n",
       "\n",
@@ -335,66 +333,57 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "a.fillna(0,inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "source": [
-    "df.shape"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(216, 12)"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df.shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "source": [
-    "df[df['year'].isna()].shape"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(27, 12)"
       ]
      },
+     "execution_count": 30,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "df[df['year'].isna()].shape"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "source": [
-    "a.head()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "       country independence_from    year\n",
-       "0  Afghanistan    United Kingdom  1919.0\n",
-       "1      Albania    Ottoman Empire  1912.0\n",
-       "2      Algeria            France  1962.0\n",
-       "3      Andorra                 0     0.0\n",
-       "4       Angola          Portugal  1975.0"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -453,33 +442,31 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "       country independence_from    year\n",
+       "0  Afghanistan    United Kingdom  1919.0\n",
+       "1      Albania    Ottoman Empire  1912.0\n",
+       "2      Algeria            France  1962.0\n",
+       "3      Andorra                 0     0.0\n",
+       "4       Angola          Portugal  1975.0"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "a.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "source": [
-    "px.choropleth(a, \r\n",
-    "              locations = 'country',\r\n",
-    "              color=\"independence_from\", \r\n",
-    "              animation_frame=\"year\",\r\n",
-    "              color_continuous_scale=\"Inferno\",\r\n",
-    "            #  locationmode='USA-states',\r\n",
-    "             # scope=\"usa\",\r\n",
-    "              range_color=(0, 20),\r\n",
-    "              title='Crime by State',\r\n",
-    "              height=600\r\n",
-    "             )"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -6614,59 +6601,23 @@
        }
       }
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "source": [
+    "px.choropleth(a, \n",
+    "              locations = 'country',\n",
+    "              color=\"independence_from\", \n",
+    "              animation_frame=\"year\",\n",
+    "              color_continuous_scale=\"Inferno\",\n",
+    "            #  locationmode='USA-states',\n",
+    "             # scope=\"usa\",\n",
+    "              range_color=(0, 20),\n",
+    "              title='Crime by State',\n",
+    "              height=600\n",
+    "             )"
+   ]
   }
  ],
  "metadata": {
