--- a/Tidy-Tuesday-Insights/kaggle.ipynb
+++ b/Tidy-Tuesday-Insights/kaggle.ipynb
@@ -1771,14 +1771,18 @@
     "options={'distance':110,'compact':'True', 'color':'white','bg':'#FF5733','font':'Times'}\n",
     "displacy.render(doc1, style='dep',options=options)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc3717310721e78340b515d0b29579350c2500991242a417bdf5db6e28ba5586"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('virtual_env')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1794,7 +1798,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31b470faf5963e5f083d957aa53d150867d19ea2bfa3ae5b2d64fda0f3a22448"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
