Lineplots: Completed  Lakes Map: Incomplete

--- a/Tidy-Tuesday-Insights/fish.ipynb
+++ b/Tidy-Tuesday-Insights/fish.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lineplots: Completed <br/>\n",
-    "Laks Map: Incomplete"
+    "2021-06-08 <br/>\n",
+    "Great Lakes Fish <br/>\n",
+    "https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-06-08/readme.md"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2021-06-08 <br/>\n",
-    "Great Lakes Fish <br/>\n",
-    "https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-06-08/readme.md"
+    "Lineplots: Completed <br/>\n",
+    "Lakes Map: Incomplete"
    ]
   },
   {
@@ -1692,13 +1692,6 @@
     "from IPython.display import Image\n",
     "Image(img_bytes)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
