--- a/Tidy-Tuesday-Insights/pollution.ipynb
+++ b/Tidy-Tuesday-Insights/pollution.ipynb
@@ -3571,11 +3571,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc3717310721e78340b515d0b29579350c2500991242a417bdf5db6e28ba5586"
-  },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('virtual_env')",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3591,7 +3588,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31b470faf5963e5f083d957aa53d150867d19ea2bfa3ae5b2d64fda0f3a22448"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
