--- a/Tidy-Tuesday-Insights/nominees.ipynb
+++ b/Tidy-Tuesday-Insights/nominees.ipynb
@@ -1412,11 +1412,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5752678d7f8bf2f9025b7583bc8bc045cfa703db6e2ec6c1e574ff04808384ee"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('project_env': venv)",
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1429,9 +1427,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "31b470faf5963e5f083d957aa53d150867d19ea2bfa3ae5b2d64fda0f3a22448"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
