--- a/Tidy-Tuesday-Insights/nurses.ipynb
+++ b/Tidy-Tuesday-Insights/nurses.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choropleth Map - Done \n",
+    "Choropleth Map - Done <br/>\n",
     "Text annotation - Done"
    ]
   },
