Multi-plots: Completed  Word Cloud: Unfinished

--- a/Tidy-Tuesday-Insights/scooby.ipynb
+++ b/Tidy-Tuesday-Insights/scooby.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "2021-07-13 <br/>\n",
+    "Scooby Doo <br/>\n",
+    "https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-13/readme.md"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Multi-plots: Completed <br/>\n",
     "Word Cloud: Unfinished"
    ]
@@ -12,20 +21,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2021-07-13 <br/>\n",
-    "Scooby Doo <br/>\n",
-    "https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-13/readme.md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "https://stackoverflow.com/questions/43606339/generate-word-cloud-from-single-column-pandas-dataframe\n",
-    "https://towardsdatascience.com/create-word-cloud-into-any-shape-you-want-using-python-d0b88834bc32\n",
-    "https://medium.com/analytics-vidhya/data-visualization-word-clouds-with-python-fbb6395be18f\n",
+    "https://stackoverflow.com/questions/43606339/generate-word-cloud-from-single-column-pandas-dataframe  <br/>\n",
+    "https://towardsdatascience.com/create-word-cloud-into-any-shape-you-want-using-python-d0b88834bc32 <br/>\n",
+    "https://medium.com/analytics-vidhya/data-visualization-word-clouds-with-python-fbb6395be18f <br/>\n",
     "https://www.python-graph-gallery.com/125-small-multiples-for-line-chart"
    ]
   },
@@ -1492,13 +1490,6 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
