Interactive Subplots with dropdown - Completed

--- a/Tidy-Tuesday-Insights/african language.ipynb
+++ b/Tidy-Tuesday-Insights/african language.ipynb
@@ -4287,7 +4287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8880,7 +8880,7 @@
     "        buttons = [create_layout_button(k, country) for k, country in enumerate(countries)]\n",
     "        )\n",
     "    ],\n",
-    "    title_text=\"Arfican Languages - Passion behind the Tweets\")\n",
+    "    title_text=\"African Languages - Passion behind the Tweets\")\n",
     "\n",
     "fig.show()"
    ]
